comment changes and major README redo

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,27 +11,25 @@
 # set Zsh as your default Tmux shell
 set-option -g default-shell /bin/zsh
 
-# UTF is great, let us use that
+# utf-8
 set -g utf8
 set-window-option -g utf8 on
 
 # 256 colors
 set -g default-terminal "screen-256color"
 
-# Tmux uses a 'control key', let's set it to 'Ctrl-a'
-# Reason: 'Ctrl-a' is easier to reach than 'Ctrl-b'
+# 'control key' set to 'Ctrl-a'; default is 'Ctrl-b'
 set -g prefix C-a
 unbind C-b
 
-# command delay? We don't want that, make it short
+# no command delay
 set -sg escape-time 1
 
-# Set the numbering of windows to go from 1 instead
-# of 0 - silly programmers :|
+# Set the numbering of windows to go from 1 instead of 0
 set-option -g base-index 1
 setw -g pane-base-index 1
 
-# map Vi movement keys as pane movement keys
+# map Vim movement keys as pane movement keys
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -53,22 +51,18 @@ bind-key -t vi-copy v begin-selection
 # update default binding of 'Enter' to also use copy-pipe
 unbind -t vi-copy Enter
 
-# Allow us to reload our Tmux configuration while
-# using Tmux
+# Allow us to reload our Tmux configuration while in use
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Getting interesting now, we use the vertical and horizontal
-# symbols to split the screen
-bind | split-window -h
-bind - split-window -v
+# Use the vertical and horizontal symbols to split the screen
+bind - split-window -h
+bind \ split-window -v
 
-# ----------------------
 # Status Bar
-# -----------------------
-set-option -g status on                # turn the status bar on
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify left             # center window list for clarity
-set-option -g status-position top      # position the status bar at top of screen
+set-option -g status on               # turn the status bar on
+set -g status-interval 5              # set update freq (default 15 sec)
+set -g status-justify left            # center window list for clarity
+set-option -g status-position bottom  # status bar at bottom of screen
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
